<resources>
    <string name="app_name">Semar</string>
    <string name="wayang_name">Gatot Kaca</string>

    <!--  Placeholder  -->
    <string name="placeholder_event_name">Pementasan Wayang Kulit Jombang</string>
    <string name="placeholder_event_date">12–11–2023</string>
    <string name="placeholder_event_price">Rp </string>
    <string name="placeholder_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Dui id ornare arcu odio ut sem. Venenatis lectus magna fringilla urna. Diam sollicitudin tempor id eu. Sagittis eu volutpat odio facilisis mauris. Risus sed vulputate odio ut. Ipsum consequat nisl vel pretium lectus quam. Vitae justo eget magna fermentum iaculis eu non diam phasellus. At quis risus sed vulputate odio ut enim blandit. Ornare suspendisse sed nisi lacus sed viverra tellus in hac. Et sollicitudin ac orci phasellus egestas tellus rutrum tellus. Volutpat diam ut venenatis tellus. Ultricies lacus sed turpis tincidunt. Est velit egestas dui id ornare. Eget nullam non nisi est sit amet facilisis. Consequat id porta nibh venenatis cras sed felis eget. Mi in nulla posuere sollicitudin aliquam ultrices sagittis. Lectus sit amet est placerat in egestas erat imperdiet sed. Fringilla est ullamcorper eget nulla facilisi etiam dignissim. Euismod elementum nisi quis eleifend quam adipiscing. Quis commodo odio aenean sed adipiscing diam. Sem viverra aliquet eget sit amet tellus cras adipiscing enim. Nibh tellus molestie nunc non blandit massa enim. Urna neque viverra justo nec ultrices. Ipsum dolor sit amet consectetur. Vitae congue eu consequat ac felis donec et odio. Risus pretium quam vulputate dignissim suspendisse. Congue quisque egestas diam in arcu cursus euismod quis viverra. Eget aliquet nibh praesent tristique magna sit. Leo duis ut diam quam. Eget aliquet nibh praesent tristique magna. Nam libero justo laoreet sit amet cursus sit amet dictum. Mattis aliquam faucibus purus in massa tempor. Dolor magna eget est lorem ipsum. Cursus mattis molestie a iaculis at erat pellentesque. Nullam eget felis eget nunc lobortis mattis aliquam faucibus. Volutpat maecenas volutpat blandit aliquam etiam erat velit. Mauris cursus mattis molestie a iaculis at erat pellentesque. A diam maecenas sed enim ut sem viverra. Tristique et egestas quis ipsum suspendisse ultrices gravida dictum fusce. Non diam phasellus vestibulum lorem sed. Blandit turpis cursus in hac habitasse platea dictumst. Tempor orci eu lobortis elementum nibh tellus molestie. Faucibus purus in massa tempor nec feugiat nisl. Commodo nulla facilisi nullam vehicula ipsum a. Gravida in fermentum et sollicitudin ac orci phasellus. Vestibulum lectus mauris ultrices eros in cursus turpis massa tincidunt. Sem fringilla ut morbi tincidunt augue interdum velit euismod. Pellentesque habitant morbi tristique senectus et netus. Ipsum consequat nisl vel pretium lectus quam id. Sagittis orci a scelerisque purus semper eget duis at tellus. Enim neque volutpat ac tincidunt vitae. Nam aliquam sem et tortor consequat id porta nibh venenatis. At imperdiet dui accumsan sit amet nulla facilisi morbi. Diam quam nulla porttitor massa id neque aliquam. Sed arcu non odio euismod lacinia at. Semper viverra nam libero justo laoreet sit. Elementum integer enim neque volutpat ac tincidunt vitae. Dui vivamus arcu felis bibendum ut tristique et egestas quis. Libero justo laoreet sit amet. Nec ullamcorper sit amet risus nullam eget felis. Magna etiam tempor orci eu lobortis elementum nibh. Facilisi nullam vehicula ipsum a arcu cursus vitae congue. Pharetra vel turpis nunc eget. Pulvinar sapien et ligula ullamcorper malesuada proin libero nunc consequat. Nibh tellus molestie nunc non blandit massa enim. Aliquam purus sit amet luctus venenatis lectus magna. Cum sociis natoque penatibus et. Nunc vel risus commodo viverra.</string>
    <string name="placeholder_ticket_price">Rp0,00</string>
    <string name="placeholder_video_duration">51.21</string>
    <string name="placeholder_video_name">Performance Videos</string>
    <string name="placeholder_wayang">Wayang</string>

    <!--  Content Description  -->
    <string name="img_desc_btn_close">Close Button</string>
    <string name="img_desc_event_poster">Event Posters</string>
    <string name="img_desc_wayang_image">Wayang Picture</string>
    <string name="img_desc_wayang_video">Video Wayang</string>
    <string name="img_desc_logo">App Logo</string>
    <string name="img_desc_logo_semar">Semar Logo</string>
    <string name="img_desc_buy_success">Successful purchase</string>
    <string name="img_app_name_tagline">App Name Tagline</string>
    <string name="cont_desc_event_tab_schedule">Event Schedule tab</string>

    <!--  Common Inputs  -->
    <string name="input_hint_name">Name</string>
    <string name="input_hint_email">Email</string>
    <string name="input_hint_password">Password</string>
    <string name="input_hint_password_confirmation">Password Confirmation</string>
    <string name="input_choose_from_gallery">Download from gallery</string>

    <!--  Common Errors  -->
    <string name="error_input_name_empty">Please enter your name</string>
    <string name="error_input_email_empty">Please enter your email</string>
    <string name="error_input_email_invalid">Invalid email format!</string>
    <string name="error_input_password_not_enough_character">Password must have at least 8 characters!</string>
    <string name="error_input_confirmation_password_not_same">Password confirmation is not the same!</string>
    <string name="error_happened">There is an error</string>
    <string name="error_choose_photo">Please select a photo</string>
    <string name="error_permission_denied">Not getting permission</string>

    <!--  Authentication  -->
    <string name="auth_login">Login</string>
    <string name="auth_or">OR</string>
    <string name="auth_login_google">Log in with Google</string>
    <string name="auth_no_account">Don\'t have an account yet?</string>
    <string name="auth_register">Register</string>
    <string name="auth_forgot_password_instruction">If the email entered has been registered, you will receive an email to reset your password</string>
    <string name="auth_forgot_password_submit">Send</string>
    <string name="auth_create_account"> Create Account</string>
    <string name="auth_forgot_password">Forgot the password?</string>
    <string name="auth_forgot_password_success">Succeed! Please check your email</string>

    <string name="auth_error_sending_reset_password">Failed to send password reset email</string>
    <string name="auth_error_authentication">Authentication failed!</string>
    <string name="auth_error_google_sign_in_fail">Failed to sign in with Google</string>

    <!--  Menu  -->
    <string name="title_home">Home</string>
    <string name="title_scan">Scan</string>
    <string name="title_event">Event</string>

    <!--  Home Screen  -->
    <string name="home_see_more">View more</string>
    <string name="home_greetings">Welcome! </string>
    <string name="home_header_wayang">Wayang Characters</string>
    <string name="home_header_video">Videos</string>
    <string name="home_content_desc_profile">Profile</string>

    <!--  Profile  -->
    <string name="title_profile">Profile</string>
    <string name="profile_settings">Setting</string>
    <string name="profile_setting_dark_mode">Dark Mode</string>
    <string name="profile_setting_edit">Edit Profile</string>
    <string name="profile_setting_language">English</string>
    <string name="profile_log_out">Logout</string>
    <string name="profile_log_out_message">Are you serious about wanting to leave?</string>
    <string name="profile_edit_btn_save">Save</string>

    <string name="profile_edit_error_fill_password">Fill in the password to change the data!</string>

    <!--  Wayang  -->
    <string name="title_wayang_list">List of Wayang</string>

    <!--  Event  -->
    <string name="title_list_video">List of Performance Videos</string>
    <string name="event_tab_missed">Missed</string>
    <string name="event_tab_active">Ongoing</string>
    <string name="event_detail_price">Price:</string>
    <string name="event_detail_buy_ticket">Buy Tickets</string>

    <!--  Ticket Form  -->
    <string name="title_buy_ticket">Buy Tickets</string>
    <string name="title_ticket_form">Ticket Form</string>
    <string name="ticket_input_payment_method">Payment Options</string>
    <string name="ticket_input_amount">Amount</string>
    <string name="ticket_input_upload_proof_of_payment">Upload Payment Proof</string>
    <string name="ticket_buy">Buy</string>
    <string name="ticket_input_email">Email</string>
    <string name="ticket_input_name">Name</string>
    <string name="ticket_buy_success">Purchase Successful</string>
    <string name="ticket_finish">Finish</string>
    <string name="ticket_check_your_receipt">Please check the purchase receipt via email</string>
    <string name="ticket_event_rupiah">Rp </string>
    <string name="ticket_total_price">Total Cost:</string>
    <string-array name="ticket_payment_methods">
        <item>Dana - 089507741841 (a.n Bahrum Nisar)</item>
        <item>GoPay - 0895606819311 (a.n. Bahrum Nisar)</item>
        <item>BNI - 3012830193 (a.n. Bahrum Nisar)</item>
        <item>BRI - 187439402423042 (a.n. Bahrum Nisar)</item>
        <item>Jago - 173210392 (a.n. Bahrum Nisar)</item>
    </string-array>

    <string name="ticket_error_ticket_amount_empty">Please input your ticket amount</string>
    <string name="ticket_error_payment_method_empty">Please input your payment options</string>
    <string name="ticket_error_buy_failed">Buy Ticket Failed</string>

    <!--  Scan Screen  -->
    <string name="scan_btn_detail">Detail</string>
    <string name="scan_prediction_result">Prediction Result:</string>
    <string name="scan_processing">Scanning…</string>

    <string name="scan_error_capture_fail">Failed to capture a photo</string>
    <string name="scan_error_bind_camera_fail">Failed to enable the camera</string>
    <string name="scan_error_prediction">Prediction failed</string>

    <!--  Custom Dialog  -->
    <string name="dialog_no">No</string>
    <string name="dialog_yes">Yes</string>
</resources>