<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/layout"
    tools:context=".ui.event.ticket.TicketFormActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextAppearance="@style/subheader1"
        style="@style/toolbar"
        tools:title="@string/ticket_form" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/ticket_input_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_name"
                    style="@style/regular_body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.6"
                    android:textColor="?attr/colorOnSurface"
                    android:inputType="textPersonName"
                    tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/ticket_input_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_email"
                    style="@style/regular_body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.6"
                    android:inputType="textEmailAddress"
                    tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/ticket_input_amount">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_ticket_amount"
                    style="@style/regular_body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/ticket_input_payment_method">

                <AutoCompleteTextView
                    android:id="@+id/input_payment_method"
                    style="@style/regular_body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:inputType="none"
                    tools:ignore="LabelFor,TextContrastCheck,VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/input_btn_proof_of_payment"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/baseline_upload_24"
                android:padding="12dp"
                android:text="@string/ticket_input_upload_proof_of_payment"
                tools:ignore="VisualLintButtonSize" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="8dp">

                <ImageView
                    android:id="@+id/iv_proof_of_payment"
                    android:layout_width="50dp"
                    android:layout_height="70dp"
                    android:scaleType="fitStart"
                    android:importantForAccessibility="no" />
                <TextView
                    android:id="@+id/tv_proof_of_payment_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_gravity="center"
                    android:maxLines="1"
                    android:ellipsize="end"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end|center_vertical"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="0dp">

        <TextView
            style="@style/regular_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:maxLines="1"
            android:text="@string/ticket_total_price" />

        <TextView
            android:id="@+id/tv_total_cost"
            style="@style/subheader1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/placeholder_price" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_buy_ticket"
        style="@style/subheader2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:backgroundTint="@color/brown_500"
        android:elevation="8dp"
        android:maxWidth="320dp"
        android:minWidth="260dp"
        android:padding="16dp"
        android:stateListAnimator="@null"
        android:text="@string/ticket_buy"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck,VisualLintButtonSize" />
</LinearLayout>