<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--    Top Bar    -->
        <LinearLayout
            android:id="@+id/top_bar_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/top_bar_home_bg"
            android:elevation="@dimen/cardview_default_elevation"
            android:minHeight="120dp"
            android:orientation="horizontal"
            android:padding="16dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_user_image"
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:cardCornerRadius="24dp"
                app:cardElevation="@dimen/cardview_default_elevation">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/home_content_desc_profile"
                    android:src="@mipmap/ic_launcher"
                    tools:ignore="ImageContrastCheck" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <TextView
                    style="@style/regular_body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/home_greetings" />

                <TextView
                    android:id="@+id/tv_user_name"
                    style="@style/subheader2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/home_see_more" />
            </LinearLayout>
        </LinearLayout>

        <!--    Karakter Wayang    -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                style="@style/subheader1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/home_header_wayang"
                android:textColor="?attr/colorPrimary" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/btn_more_wayang"
                style="@style/regular_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:ellipsize="end"
                android:focusable="true"
                android:maxLines="1"
                android:text="@string/home_see_more"
                android:textColor="?attr/colorPrimary"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_wayang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_wayang" />

        <!--  List Video  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                style="@style/subheader1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/home_header_video"
                android:textColor="?attr/colorPrimary" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/btn_more_videos"
                style="@style/regular_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:ellipsize="end"
                android:focusable="true"
                android:maxLines="1"
                android:text="@string/home_see_more"
                android:textColor="?attr/colorPrimary"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_videos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            tools:listitem="@layout/item_video" />

    </LinearLayout>

</ScrollView>